# aws-identity-center-config-file-generator

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
aws_identity_center_config_file_generator/: .env.example  main.py
aws_identity_center_config_file_generator/identitystore/: get_accounts_for_user.py  get_users.py
aws_identity_center_config_file_generator/templates/: config.jinja
aws_identity_center_config_file_generator/utils/: flatten.py  validate_environment.py
